<?xml version="1.0" encoding="utf-8"?>





<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/gradient"
    tools:context=".MainActivity">











    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="360dp"
        app:cardBackgroundColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="120dp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_name"
            android:layout_marginTop="120dp"
            android:layout_marginStart="5dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:layout_marginTop="200dp"
            android:layout_marginStart="10dp"


            />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="Enter Email"
            android:layout_marginStart="10dp"
            android:layout_marginTop="220dp"

            />

    </androidx.cardview.widget.CardView>





    <ImageView

        android:id="@+id/avatar_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/photo1671985196"


        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="320dp"
        android:text="@string/lacey_fernandez"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/j" />


    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/icon" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="650dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_200"
        />
</androidx.cardview.widget.CardView>
